language-server/src/tests/snapshots/gleam_language_server__tests__completion__for_custom_type_definition.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub type Wibble {\n  Wobble\n}"
---

pub type Wibble {
|  Wobble
}


----- Completion content -----
BitArray
  kind:   Class
  detail: Type
  sort:   5_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   5_Bool
Float
  kind:   Class
  detail: Type
  sort:   5_Float
Int
  kind:   Class
  detail: Type
  sort:   5_Int
List
  kind:   Class
  detail: Type
  sort:   5_List
Nil
  kind:   Class
  detail: Type
  sort:   5_Nil
Result
  kind:   Class
  detail: Type
  sort:   5_Result
String
  kind:   Class
  detail: Type
  sort:   5_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   5_UtfCodepoint
Wibble
  kind:   Class
  detail: Type
  sort:   3_Wibble
  edits:
    [2:0-2:0]: "Wibble"
