language-server/src/tests/snapshots/gleam_language_server__tests__completion__importable_module_function_from_deep_module.snap
---
source: language-server/src/tests/completion.rs
expression: "\n"
---
|


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   6_dep.wobble
  desc:   a/b/dep
  edits:
    [1:0-1:0]: "dep.wobble"
    [0:0-0:0]: "import a/b/dep\n\n"
