language-server/src/tests/snapshots/gleam_language_server__tests__completion__importable_module_function_with_existing_imports.snap
---
source: language-server/src/tests/completion.rs
expression: "\n//// Some module comments\n// Some other whitespace\n\nimport dep2\n"
---
|
//// Some module comments
// Some other whitespace

import dep2


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   6_dep.wobble
  desc:   dep
  edits:
    [1:0-1:0]: "dep.wobble"
    [0:0-0:0]: "import dep\n\n"
dep2.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   4_dep2.wobble
  desc:   app
  edits:
    [1:0-1:0]: "dep2.wobble"
