language-server/src/tests/snapshots/gleam_language_server__tests__completion__importable_type_from_deep_module.snap
---
source: language-server/src/tests/completion.rs
expression: "\n\npub fn wibble(\n  _: String,\n) -> Nil {\n  Nil\n}\n"
---


pub fn wibble(
|  _: String,
) -> Nil {
  Nil
}


----- Completion content -----
BitArray
  kind:   Class
  detail: Type
  sort:   5_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   5_Bool
Float
  kind:   Class
  detail: Type
  sort:   5_Float
Int
  kind:   Class
  detail: Type
  sort:   5_Int
List
  kind:   Class
  detail: Type
  sort:   5_List
Nil
  kind:   Class
  detail: Type
  sort:   5_Nil
Result
  kind:   Class
  detail: Type
  sort:   5_Result
String
  kind:   Class
  detail: Type
  sort:   5_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   5_UtfCodepoint
dep.Zoo
  kind:   Class
  detail: Type
  sort:   6_dep.Zoo
  edits:
    [3:0-3:0]: "dep.Zoo"
    [0:0-0:0]: "import a/b/dep\n"
